# grlang

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  TODO.md
.github/workflows/: ci.yaml
grlang_codegen/: CMakeLists.txt
grlang_codegen/include/grlang/: codegen.h
grlang_codegen/src/: codegen.cpp  codegen_llvm_ir.cpp
grlang_codegen/test/: basic_expr.grl  codegen.test.cpp  codegen_llvm_ir.test.cpp  fib_loop.grl  fib_recurse.grl
grlang_compile/: CMakeLists.txt
grlang_compile/include/grlang/: compile.h
grlang_compile/src/: compile.cpp
grlang_compile/test/: compile.test.cpp
grlang_eval/: CMakeLists.txt
grlang_eval/include/grlang/: eval.h
grlang_eval/src/: eval.cpp
grlang_eval/test/: eval.test.cpp
grlang_node/: CMakeLists.txt
grlang_node/include/grlang/: node.h
grlang_node/src/: node.cpp
grlang_node/test/: node.test.cpp
grlang_parse/: CMakeLists.txt
grlang_parse/include/grlang/: parse.h
grlang_parse/include/grlang/detail/: token.h
grlang_parse/src/: parse.cpp  token.cpp
grlang_parse/test/: parse.test.cpp  parse_test.cpp
grtest/: CMakeLists.txt
grtest/cmake/: GrTest.cmake
grtest/include/: grtest.h
